# process_sorting_simulator

./: CMakeLists.txt  automatic_main.cpp  main.cpp
data/: data.txt
include/: simulator.h
outputs/: .~lock.first.csv#  all.csv  first.csv
source/: fifo.cpp  process.cpp  processor.cpp  round.cpp  simulator.cpp  sjf.cpp
